--- a/app/script/views/products.html
+++ b/app/script/views/products.html
@@ -1,4 +1,4 @@
-<div ng-repeat="product in products.data">
+<div ng-repeat="product in products">
  <h5>{{product.name}}</h5>
  <h6>Tags:</h6>
  <ul>
