change poller to promise style

--- a/app/script/views/amazony.html
+++ b/app/script/views/amazony.html
@@ -1,5 +1,7 @@
+<h3>Amazony</h3>
+<hr/ >
 <div>
-  <div ng-repeat="product in productsAmazony">
+  <div ng-repeat="product in productsAmazony.list">
   <h5>{{product.name}}</h5>
   <h6>Tags:</h6>
   <ul>
