--- a/app/script/views/ebai.html
+++ b/app/script/views/ebai.html
@@ -1,5 +1,7 @@
+<h3>Ebai</h3>
+<hr/ >
 <div>
-  <div ng-repeat="product in productsEbai">
+  <div ng-repeat="product in productsEbai.list">
   <h5>{{product.name}}</h5>
   <h6>Tags:</h6>
   <ul>
